Fix 100vh height on mobile safari
https://allthingssmitty.com/2020/05/11/css-fix-for-100vh-in-mobile-webkit/

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,11 @@
   font-style: italic;
 }
 
+html {
+   height: webkit-fill-available;
+   height: fill-available;
+}
+
 body {
   font-size: clamp(0.8rem, calc(0.5rem + 1.2vw), 2.5rem);
   font-family: 'Libre Baskerville', serif;
